$ 1.2.0
  % Version 1.2.0 (Must have feature edition)
  _ 2013-06-22
  ! New Features:
  * Auto complete of @mentions and #hashtags
  * New account switcher with picture and service icon
  * Crittercism upgrade (making it easier for us to see when you have problems)
  * Added new change log (this is it!)
  * Added userame to the compose box
  ! Fixes:
  * Show inline images from retweets
  * DM notifications load into DM lane
  * Retweets of Retweets now correctly stay marked as such
  * Correct handling of media URLs if the domain contains upper case characters
$ 1.1.4
  % Version 1.1.4 (Calm after the blackout edition)
  _ 2013-06-22
    ! New Features:
    * Image loader retrys the download of image if it's empty.
    * Status' passed from the cache to the spotlight to prevent loading
    * Status' updated (by way of favorite of RT) are passed back to the main feed to show this happening
    * Vibration setting for new notifications
    ! Fixes:
    * Correct new tweet bar
    * Prevent incorrect mention counts in notifications
    * Profile images are "Bigger" rather than "Original" - corrects shape of images, and also reduces data to download
    * Mirror twitter.com functionality by excluding your own handle when replying to your own tweets
    * Spotlight retweets now function correctly
    * Retweet & Favorite dog ears now show when the event occurs and the cache is updated
    * Correct handling of tweet deletion to remove from the cache, rather than keep displaying
    * Added better handling of image downloading, with addditional error handling in an attempt to prevent this being a fatal error
$ 1.1.3
  % Version 1.1.3 (Betamax edition)
  _ 2013-06-12
    ! New Features:
    * Notifications for Direct Messages
    * Removed the cancel tweet button when composing.
    * Images now check for new versions every 24 hours. No more "Clear Image Cache" needed
    ! Fixes:
    * Character count show shows on new tweets