@@ -29,6 +29,7 @@ $ 1.2.0
   * Crittercism upgrade (making it easier for us to see when you have problems)
   * Added new change log (this is it!)
   * Added userame to the compose box
+  * Made links to contributors clickable
   ! Fixes:
   * Show inline images from retweets
   * DM notifications load into DM lane
